work on Lecture 4.6. didn’t finish the stuff in Section 11 of Goerss’s paper. might spill into a Lecture 4.7 (which would be OK if we got HFp_* kU out of it for free…)

--- a/main.bib
+++ b/main.bib
@@ -281,6 +281,25 @@ MRREVIEWER = {Neil P. Strickland},
   URL = {https://www.math.rochester.edu/people/faculty/doug/otherpapers/coctalos.pdf}
 }
 
+@article {HopkinsHunton,
+    AUTHOR = {Hopkins, M. J. and Hunton, J. R.},
+     TITLE = {On the structure of spaces representing a {L}andweber exact
+              cohomology theory},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {34},
+      YEAR = {1995},
+    NUMBER = {1},
+     PAGES = {29--36},
+      ISSN = {0040-9383},
+     CODEN = {TPLGAF},
+   MRCLASS = {55N20 (55N22)},
+  MRNUMBER = {1308488},
+MRREVIEWER = {Andrew J. Baker},
+       DOI = {10.1016/0040-9383(94)E0013-A},
+       URL = {http://dx.doi.org/10.1016/0040-9383(94)E0013-A},
+}
+
 @article {HKR,
     AUTHOR = {Hopkins, Michael J. and Kuhn, Nicholas J. and Ravenel, Douglas
               C.},
