--- a/sigma.tex
+++ b/sigma.tex
@@ -457,6 +457,8 @@ Moving from $BU$ to $MU$: $MU\<6\>^E$ is a $\G_m$--torsor over $BU\<6\>^E$, so i
 
 \section{Unstable additive cooperations for $kU$}
 
+\todo[inline]{You could go through the Singer / Stong calculation, or you can look at Example 10.4 in Goerss's Hopf Rings paper.}
+
 
 
 
