remarks from teaching Lecture 4.1

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -9,7 +9,7 @@
 
 \section{Unstable contexts}
 
-Today we will take the framework of contexts discussed in \Cref{StableContextLecture} and augment it in two important (and very distinct) ways.  First, we will assume that $X$ is a \emph{space} rather than a spectrum, and try to encode the extra structure appearing on $E_* X$ from this assumption.  Toward that end, recall that the levels of $\context{E}(X)$ are defined by repeatedly smashing $X$ with $E$, and that we had arrived at this by considering descent for the adjunction
+Today we will take the framework of contexts discussed in \Cref{StableContextLecture} and augment it in two\todo{Fix this intro. Don't name ``two'' things, for instance.} important (and very distinct) ways.  First, we will assume that $X$ is a \emph{space} rather than a spectrum, and try to encode the extra structure appearing on $E_* X$ from this assumption.  Toward that end, recall that the levels of $\context{E}(X)$ are defined by repeatedly smashing $X$ with $E$, and that we had arrived at this by considering descent for the adjunction
 \begin{center}
 \begin{tikzcd}
 \CatOf{Spectra} = \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em]{l}
@@ -102,7 +102,7 @@ A ring spectrum $E$ with K\"unneth isomorphisms \[E_*(\OS{E}{m} \times \OS{E}{n}
 One can modify this story in a number of minor ways.
 
 \begin{remark}
-One can restrict to the \emph{additive} unstable cooperations by passing to the quotient $Q^\ast E_* \OS{E}{*}$.  These corepresent the morphisms in a cocategory object in $\CatOf{Rings}$ (using the $\circ$--product for multiplication, which descends to $\ast$--indecomposables).  The ring $E_*$ corepresents the objects in this cocategory object.\todo{A lot of the homological algebra of unstable comodules exists only after passing to this quotient.  Maybe explain why.}
+One can restrict to the \emph{additive} unstable cooperations by passing to the quotient $Q^\ast E_* \OS{E}{*}$.  These corepresent the morphisms in a cocategory object in $\CatOf{Rings}$ (using the $\circ$--product for multiplication, which descends to $\ast$--indecomposables).  The ring $E_*$ corepresents the objects in this cocategory object.\todo{A lot of the homological algebra of unstable comodules exists only after passing to this quotient.  Try to explain why.}\todo{Explain this Remark, really. (1) Why does passing to the indecomposables project onto the additive cooperations? This should be thought of as an operation dual to restricting to the primitive unstable \emph{operations}. (2) Why a cocategory object?}\todo{Maybe put in the unstable $\subseteq$ unstable additive $\subseteq$ stable diagram? Talk about examples of these three things in, say, mod--$2$ homology?}
 \end{remark}
 
 \begin{remark}
