pre-class comments on Lecture 4.2

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -198,12 +198,12 @@ The leftward direction of this isomorphism is realized by the $\circ$--product.
 \end{proof}
 
 \begin{remark}\label{UnstableCoopnsForHF2AndGa}
-Our computation of the full Hopf ring of unstable cooperations can be winnowed down to give information about particular classes of cooperations.  For instance, the \emph{additive} unstable cooperations are given by passing to the $\ast$--indecomposable quotient
+Our computation of the full Hopf ring of unstable cooperations can be winnowed down to give information about particular classes of cooperations.  For instance, the \emph{additive} unstable cooperations are given by passing to the $\ast$--indecomposable quotient\todo{Later you use $Q^*$ instead of $Q_*$ to denote $\ast$--indecomposables.  Settle on one of the two.}
 \begin{align*}
 Q_{\ast} H\F_2{}_* \OS{H\F_2}{*} & \cong \F_2\left\{a_{(I_0)} \circ \cdots \circ a_{(I_t)}\right\} \\
 & \cong \F_2[\xi_0, \xi_1, \xi_2, \ldots].
 \end{align*}
-In terms of \Cref{SteenrodAlgIdentifiedWithAutGa}, we have \[\Spec Q_{\ast} H\F_2{}_* \OS{H\F_2}{*} \cong \InternalEnd(\G_a).\]  One passes to the \emph{stable} cooperations by taking the colimit along the homology suspension element $a_{(0)} = \xi_0$.  This has the effect of adjoining a $\circ$--product inverse to $a_{(0)}$, i.e.,
+In terms of \Cref{SteenrodAlgIdentifiedWithAutGa}, we have \[\Spec Q_{\ast} H\F_2{}_* \OS{H\F_2}{*} \cong \InternalEnd(\G_a).\]  One passes to the \emph{stable} cooperations by taking the colimit along the homology suspension element $a_{(0)} = \xi_0$.\todo{Define what the homology suspension element $e$ is.  The point is that the equivalence $\OS{E}{n} \simeq \Loops \OS{E}{n+1}$ is adjoint to a map $\Susp \OS{E}{n} \to \OS{E}{n+1}$, and the effect of this map on $F$--homology is $\circ$--ing with $e$.}  This has the effect of adjoining a $\circ$--product inverse to $a_{(0)}$, i.e.,\todo{Is this right? What happened to $\mathcal A_*$ versus $\mathcal AP_0$?}
 \begin{align*}
 (Q_{\ast} H\F_2{}_* \OS{H\F_2}{*})[a_{(0)}^{\circ(-1)}] & \cong \F_2[\xi_0^\pm, \xi_1, \xi_2, \ldots],
 \end{align*}
@@ -216,7 +216,8 @@ The odd--primary analogue of this result appears in Wilson's book.  In that situ
 \end{remark}
 
 
-------
+
+
 
 \todo{Neil's MO answer about $H_* K(\Z, 3)$: http://mathoverflow.net/a/216041/1094}
 
