multiplicative extensions in Lecture 4.2

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -187,7 +187,7 @@ Make the inductive assumption that this is true for some fixed value of $t$.  It
 d((a_{(j_1)} \circ \cdots \circ a_{(j_t)})^{[2^{j_{t+1}}]}) & \equiv d(a_{(j_1)} \circ \cdots \circ a_{(j_t)} \circ a_{(j_{t+1})}) \pmod{\text{decomposables}} \\
 & = a_{(j_1)} \circ d(a_{(j_2)} \circ \cdots \circ a_{(j_{t+1})}) = 0.
 \end{align*}
-Hence, the spectral sequence collapses and the induction holds.
+Hence, the spectral sequence collapses.  To see that there are no multiplicative extensions, note that the only potentially undetermined multiplications occur as $\ast$--squares of exterior classes.  However, the $\ast$--squaring map is induced by the topological map \[\OS{H\F_2}{t} \xrightarrow{\cdot 2} \OS{H\F_2}{t},\] which is already null on the level of spaces.  It follows that there are no extensions and the induction holds.
 \end{proof}
 
 \begin{corollary}
