--- a/cooperations.tex
+++ b/cooperations.tex
@@ -57,7 +57,7 @@ In the present setting, consider the analogous composite
 \end{align*}
 
 \begin{definition}
-The \textit{unstable context of $E$} is the collection of cosimplicial abelian groups $\pi_* \sheaf{UD}_E(S^n)$.  In the case $n = 0$, this is a cosimplicial ring, and in the case $n \ne 0$ the $0$--simplices merely form a module over $\pi_* \sheaf{UD}_E(S^0)[0]$.\todo{Sort out exactly what structure lives here.}
+The \textit{unstable context of $E$} is the collection of cosimplicial abelian groups $\pi_* \sheaf{UD}_E(S^n)$.  In the case $n = 0$, this is a cosimplicial ring, and in the case $n \ne 0$ the $0$--simplices merely form a module over $\pi_* \sheaf{UD}_E(S^0)[0]$\todo{This is just $E_*$, right?}.\todo{Sort out exactly what structure lives here.}
 \end{definition}
 
 \begin{remark}
