--- a/preface.tex
+++ b/preface.tex
@@ -4,6 +4,8 @@
 
 \newpage
 
+This document was compiled on \today. This may not reflect when it was cloned from git, though.\todo{I would like this to print the git HEAD's id, if it exists.  See https://www.ctan.org/tex-archive/macros/latex/contrib/gitinfo2 .}
+
 \subsection*{Acknowledgements}
 
 Matthew Ando, Michael Hopkins, Neil Strickland
