notes from many conversations with nat

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -31,6 +31,29 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 \todo[inline]{Yifei warned me that Matt's ``there exists a unique coordinate...''\ Lemma is specifically about lifting the \emph{Honda} formal group law over $\F_q$.  If you want to do this with elliptic cohomology or something, then you need a stronger statement (and it's clear what this statement should be, but no one has proven it).}
 
 
+------ Here are various notes from conversations with Nat, recorded and garbled well after they happened. ------
+
+We could try to understand Matt's thesis's Section 4.2.  It identifies the action of the internal power operation on $E_n$ using the internal theory of quotient isogenies to the Lubin--Tate deformation problem (2.5.4).  Conditions 1 and 3 of 4.2.1 are easy to verify: they are 4.2.3 (evaluate on a point) and 4.2.4 (the power operation does raise things to a power) respectively.  Condition 2 takes more work, and it's about identifying the divisor associated to the isogeny granted by Condition 1.  It's worked out in 4.2.5, which is not very hard, and 4.2.6, which shows that \emph{the} Thom class associated to a vector bundle is sent under a power operation to \emph{some} Thom class.  4.2.5 then uses that the quotient of \emph{some} Thom classes has to be a unit in the underlying ring.
+
+(Q: Can 4.2.5 be phrased about two coordinates on the same formal group, rather than two presentations of the same divisor?  There's a comparison between functions on the quotient with invariant functions on the original group --- and perhaps with functions invariant by pulling back along the isogeny?)
+
+Prop 8.3 in ``Character of the Total Power Operation'' provides an algebro-geometric proof of something in AHS04, using the fact that for $R$ a nice complete local ring and $G$, $G'$ $p$--divisible groups over $R$, there is an injection \[\Isog_R(G, G') \into \Isog_{R/\m}(G, G').\]
+
+Nat thinks that using the power operation internal to $MU$ is what gets you Lubin's product formula for the quotient (cf.\ the calculation in Quillen's theorem), and using the power operation internal to $E$--theory gives you \emph{something} called $\psi^H$, which you separately calculate on Euler classes.  The point (cf.\ Ando's thesis's Theorem 1) is to pick a coordinate so that these coincide.  (Lubin--Tate theory and Lubin's theory of isogenies says that they always coincide up to unique $\star$--isomorphism --- after all, automorphisms (and isogenies) don't deform --- and the point is that for particular coordinates on particular formal groups, you can take the $\star$--isomorphisms to all be the identity.)
+
+Ando's thesis only deals with power operations internal to $E$--theory starting in Section 4.  Before then, he shows that the pushforward of the power operations internal to $MU$ can be lifted through maps on $E$--theory (although these maps may not be topologically induced).  It's not clear to me what the value of this is --- if you're constructing the operations on the $E$--theory side, then surely you're going to construct them so that they're on-the-nose equal to the $MU$--operations?
+
+The meaty part of AHS04 is Theorem 6.1, that the necessary condition is sufficient.  It falls into steps: first, we can restrict attention to $\Sigma_p$, and even inside of there we can restrict attention to $C_p$.  Then, the two directions around the $H_\infty$ square give two trivializations (cf.\ 4.2.6 of Ando's thesis) $g_{cl(ockwise)}$ and $g_{c(ounter)c(lockwise)}$ of $\Theta^k \sheaf I(0)$.  The fact that they're both trivializations means there's an equation $g_{cl} = r g_{cc}$ for $r \in E^0 D_{C_p} BU[2k, \infty)^\times$.  Then, he wants to study the map \[E^0 D_{C_p} BU[2k, \infty)_+ \xrightarrow{\Delta^* \times i^*} E^0 BC_p^* \times BU[2k, \infty) \times E^0 BU[2k, \infty)^{\times p},\] which they know to be an injection by work of McClure, but for some reason they can restrict attention to just the left-hand factor.  The left-hand factor is the ring of functions on $\InternalHom{FormalGps}(A, \G_F) \times BU[2k, \infty)_E$, and they can further restrict attention to level structures, where there are only two: the injective one and the null map.  They then check these two cases by hand, and it follows that $r = 0$, so the two ways of navigating the diagram agree at the level of topology.
+
+(Section 8 of Hopkins--Lawson has an injectivity proof that smells similar to the above injectivity trick with McClure's map.)
+
+Just working in the case $k = 1$ (or $k = 0$), which is supposed to recover the ``classical'' results of Ando's thesis, we can try to recursively expand the various arguments and definitions.  The counterclockwise map appears to be the easy one, and it's discussed around 4.11.  The clockwise map appears to be the hard one, and it's discussed in 3.21.  For $\chi_\ell = \chi_\ell \times \G$ given by \[T \times \G \xrightarrow{\chi_\ell} \underline{\operatorname{Hom}}(A, \G) \times \G,\] the main content of 3.21 is an equality \[\chi_\ell^* s_{cl} = \psi_\ell^{\L}(s_g) = (\psi_\ell^{\G/E})^* (\psi_\ell^E)^* s_g,\] where $\psi_\ell^E$ is defined in 3.9, $\psi_\ell^{\G/E}$ is defined in 3.14 and the preceding remarks, $s_g$ is the section describing the source coordinate (cf.\ part 2 of 3.21), and $\psi_\ell^{\L}$ is described between the paragraph before 3.16 and Definition 3.20.  Trying to rewrite $\psi_\ell^{\L}$ into the form required for 3.21 requires pushing through 8.11 and 10.15.
+
+We spent a lot of time just writing out the definitions of things, trying to get them straight in the universal case (which AHS04 wants to avoid for some reason --- maybe they didn't yet have a good form of Strickland's theorem?).  It was helpful in the moment, but hard to read now.
+
+All of this rests, most importantly, on how a quotient of the Lubin--Tate universal deformation by a subgroup still gives a Lubin--Tate universal deformation.  This is Section 12.3 of AHS04, and it's Section 9 of Neil's Finite Subgroups paper.  (Nat says there's something to look out for in here.  Watch where they say they have $E_0$--algebra maps versus ring maps.)
+
+
 
 
 
