--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,7 @@
 \DeclareMathOperator{\Sub}{Sub}
 \DeclareMathOperator{\Level}{Level}
 \DeclareMathOperator{\Mono}{Mono}
+\DeclareMathOperator{\Isog}{Isog}
 \let\div\undefined\DeclareMathOperator{\div}{div}
 
 \numberwithin{equation}{section}
