make \bigast center properly

--- a/main.tex
+++ b/main.tex
@@ -133,7 +133,7 @@
 \renewcommand{\th}{\textsuperscript{th}}
 \newcommand{\st}{\textsuperscript{st}}
 
-\newcommand{\bigast}{\mathop{\Huge \mathlarger{\mathlarger{\ast}}}}
+\newcommand{\bigast}{\mathop{\vcenter{\hbox{$\Huge \mathlarger{\mathlarger{\ast}}$}}}}
 % \newcommand{\bigcirc}{\mathop{\Huge \mathlarger{\mathlarger{\circ}}}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
