Added sumfgl.tex code, moved preamble into separate file.

--- a/main.tex
+++ b/main.tex
@@ -1,325 +1,10 @@
 \documentclass[12pt]{book}
 
-\usepackage{fullpage}
-% \usepackage{savetrees}
-\usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
-\usepackage{hyperref}
-\usepackage[version warn]{sseqpages/sseqpages}
-%\usepackage{stmaryrd}
-%\usepackage{MnSymbol}
-
-\usepackage{mathpazo} % math & rm
-\linespread{1.05}        % Palatino needs more leading (space between lines)
-\usepackage[scaled]{helvet} % ss
-\usepackage{courier} % tt
-\normalfont
-\usepackage[T1]{fontenc}
-
-\usepackage{tikz-cd}
-\makeatletter
-\tikzcdset{
-    iso/.style="\cong"{#1},
-    iso'/.style="\cong"{/utils/exec=\isop@which,#1},
-    equiv/.style="\simeq"{#1},
-    equiv'/.style="\simeq"{/utils/exec=\isop@which,#1}
-}
-
-\def\isop@getrow#1-#2-#3\@nil{#2}
-\def\isop@getcolumn#1-#2-#3\@nil{#3}
-\def\isop@which{
-    \ifnum\@xp\isop@getrow\tikzcd@ar@start\@nil=\@xp\isop@getrow\tikzcd@ar@target\@nil\relax
-        \pgfkeysalso{yscale=-1}
-        \ifnum\@xp\isop@getcolumn\tikzcd@ar@start\@nil>\@xp\isop@getcolumn\tikzcd@ar@target\@nil\relax
-            \pgfkeysalso{'}
-        \fi
-    \else
-        \pgfkeysalso{'}
-    \fi
-}
-\makeatother
-
-
-\usepackage[textsize=tiny]{todonotes}
-\usepackage[missing={See gitinfo2 instructions},dirty={(*)}]{gitinfo2}
-
-\usepackage{pdflscape}
-\usepackage{rotating}
-\usepackage{mathtools}
-
-% used for \bigast
-\usepackage{relsize}
-
-% make the bibliography appear in the table of contents
-\usepackage[nottoc,numbib]{tocbibind}
-
-\usepackage{cleveref}
-
-% used to set custom chapter titles
-\usepackage{tocloft,calc}
-
-% this steals from http://tex.stackexchange.com/questions/36006/how-can-i-use-a-symbol-provided-by-a-package-without-changing-the-entire-mathema to import the "action" arrow
-\DeclareFontFamily{U} {MnSymbolA}{}
-
-\DeclareFontShape{U}{MnSymbolA}{m}{n}{
-  <-6> MnSymbolA5
-  <6-7> MnSymbolA6
-  <7-8> MnSymbolA7
-  <8-9> MnSymbolA8
-  <9-10> MnSymbolA9
-  <10-12> MnSymbolA10
-  <12-> MnSymbolA12}{}
-\DeclareFontShape{U}{MnSymbolA}{b}{n}{
-  <-6> MnSymbolA-Bold5
-  <6-7> MnSymbolA-Bold6
-  <7-8> MnSymbolA-Bold7
-  <8-9> MnSymbolA-Bold8
-  <9-10> MnSymbolA-Bold9
-  <10-12> MnSymbolA-Bold10
-  <12-> MnSymbolA-Bold12}{}
-\DeclareSymbolFont{MnSyA} {U} {MnSymbolA}{m}{n}
-% 184 and 255 are both good options
-\DeclareMathSymbol{\actson}{\mathrel}{MnSyA}{255}
-
-
-%%% DONE WITH PACKAGES
-
-\setlength{\marginparwidth}{1in-\marginparsep} % fullpage sets margins to 1in
-
-\newcommand{\oweproof}[1]{\todo[color=red]{\textbf{You owe a proof of: } #1.}}
-\newcommand{\citeme}[1]{\todo[color=green]{\textbf{Cite me: } #1.}}
-\newcommand{\needproof}[1]{\todo[color=magenta]{\textbf{I need to already know: } #1.}}
-
-
-
-\newcommand{\Z}{\mathbb Z}
-\renewcommand{\S}{\mathbb S}
-\newcommand{\F}{\mathbb F}
-\newcommand{\G}{\widehat{\mathbb G}}
-\newcommand{\R}{\mathbb R}
-\newcommand{\RP}{\R\mathrm P}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\CP}{\C\mathrm P}
-\newcommand{\A}{\widehat{\mathbb{A}}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\FH}{\textbf{FH}}
-\newcommand{\CH}{\textbf{CH}}
-\renewcommand{\L}{\mathcal{L}}
-\renewcommand{\H}{\mathcal{H}}
-\renewcommand{\P}{\mathbb{P}}
-\newcommand{\W}{\mathbb W}
-\newcommand{\m}{\mathfrak m}
-\renewcommand{\O}{\mathcal O}
-\renewcommand{\t}{\mathbf t}
-\newcommand{\Gm}{\mathbb G_m}
-\newcommand{\h}{\mathfrak h}
-\newcommand{\D}{\mathbb D}
-
-\newcommand{\<}{\langle}
-\renewcommand{\>}{\rangle}
-\newcommand{\sm}{\wedge}
-\newcommand{\Susp}{\Sigma}
-\newcommand{\Loops}{\Omega}
-\renewcommand{\phi}{\varphi}
-\renewcommand{\epsilon}{\varepsilon}
-\newcommand{\eps}{\varepsilon}
-\newcommand{\mmod}{/\!\!/}
-\newcommand{\co}{\colon\thinspace}
-\newcommand{\into}{\hookrightarrow}
-\newcommand{\cotensor}{\square}
-\newcommand{\from}{\leftarrow}
-\newcommand{\onto}{\twoheadrightarrow}
-\newcommand{\mhyphen}{\text{-}}
-
-\renewcommand{\th}{\textsuperscript{th}}
-\newcommand{\st}{\textsuperscript{st}}
-
-\newcommand{\bigast}{\mathop{\vcenter{\hbox{$\Huge \mathlarger{\mathlarger{\ast}}$}}}}
-% \newcommand{\bigcirc}{\mathop{\Huge \mathlarger{\mathlarger{\circ}}}}
-
-\newcommand{\context}[1]{\mathcal{M}_{#1}}
-\newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
-\newcommand{\CatOf}[1]{\mathsf{#1}}
-\newcommand{\ps}[1]{\llbracket{#1}\rrbracket}
-\newcommand{\moduli}[1]{\mathcal{M}_{\mathbf{#1}}}
-\newcommand{\OS}[2]{\underline{\smash{#1}}_{#2}}
-\newcommand{\InternalHom}[1]{\operatorname{\underline{\smash{\CatOf{#1}}}}}
-\newcommand{\InternalAut}{\operatorname{\underline{\smash{\operatorname{Aut}}}}}
-\newcommand{\InternalEnd}{\operatorname{\underline{\smash{\operatorname{End}}}}}
-\newcommand{\sheaf}[1]{\mathcal{#1}}
-
-\newcommand{\Spin}{\mathit{Spin}}
-\newcommand{\String}{\mathit{String}}
-\newcommand{\TMF}{\mathit{TMF}}
-\newcommand{\Tmf}{\mathit{Tmf}}
-\newcommand{\tmf}{\mathit{tmf}}
-\newcommand{\TAF}{\mathit{TAF}}
-\newcommand{\BP}{\mathit{BP}}
-\newcommand{\MU}{\mathit{MU}}
-\newcommand{\Tate}{\mathrm{Tate}}
-\newcommand{\gl}{\mathit{gl}}
-\newcommand{\GL}{\mathit{GL}}
-\newcommand{\perf}{\mathrm{perf}}
-\newcommand{\gpd}{\mathrm{gpd}}
-\newcommand{\ptyp}{p\text{-}\mathrm{typ}}
-\newcommand{\id}{\mathrm{id}}
-\newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
-\newcommand{\FGps}{\mathrm{FGps}}
-\newcommand{\fin}{\mathrm{fin}}
-
-\DeclareMathOperator{\Ind}{Ind}
-\DeclareMathOperator{\Spec}{Spec}
-\DeclareMathOperator{\Spf}{Spf}
-\DeclareMathOperator{\Sch}{Sch}
-\DeclareMathOperator*{\colim}{colim}
-\DeclareMathOperator{\End}{End}
-\DeclareMathOperator{\Div}{Div}
-\DeclareMathOperator{\SDiv}{SDiv}
-\DeclareMathOperator{\Sq}{Sq}
-\DeclareMathOperator{\Sym}{Sym}
-\DeclareMathOperator{\Aut}{Aut}
-\DeclareMathOperator{\Def}{Def}
-\DeclareMathOperator{\Pic}{Pic}
-\DeclareMathOperator{\Ext}{Ext}
-\DeclareMathOperator{\hAut}{hAut}
-\DeclareMathOperator{\Coord}{Coord}
-\DeclareMathOperator{\Tor}{Tor}
-\DeclareMathOperator{\Cotor}{Cotor}
-\DeclareMathOperator{\coker}{coker}
-\DeclareMathOperator{\Hom}{Hom}
-\DeclareMathOperator{\Weil}{Weil}
-\DeclareMathOperator{\Alt}{Alt}
-\DeclareMathOperator{\Tot}{Tot}
-\DeclareMathOperator{\height}{ht}
-\DeclareMathOperator{\Sub}{Sub}
-\DeclareMathOperator{\Level}{Level}
-\DeclareMathOperator{\Mono}{Mono}
-\DeclareMathOperator{\Isog}{Isog}
-\let\div\undefined\DeclareMathOperator{\div}{div}
-
-\numberwithin{equation}{section}
-
-\theoremstyle{plain}
-\newtheorem{theorem}[equation]{Theorem}
-\newtheorem{proposition}[equation]{Proposition}
-\newtheorem{lemma}[equation]{Lemma}
-\newtheorem{corollary}[equation]{Corollary}
-\newtheorem{conjecture}[equation]{Conjecture}
-\theoremstyle{definition}
-\newtheorem{definition}[equation]{Definition}
-\newtheorem{construction}[equation]{Construction}
-\newtheorem{warning}[equation]{Important Warning}
-\theoremstyle{remark}
-\newtheorem{remark}[equation]{Remark}
-\newtheorem{example}[equation]{Example}
-
-\crefname{section}{lecture}{lectures} \Crefname{section}{Lecture}{Lectures}
-\crefname{chapter}{case study}{case studies} \Crefname{chapter}{Case Study}{Case Studies}
+\input{preamble}
 
 \title{Formal Geometry and Bordism Operations \\ \vspace{0.5\baselineskip} \small{Lecture notes}}
 \author{Eric Peterson}
 \date{{\footnotesize Compiled: \today \\ Git hash: {\gitAbbrevHash}{\gitDirty}}}
-
-\newcounter{whichdate}
-\setcounter{whichdate}{0}
-\newcommand{\nextdate}{
-\ifnum\value{whichdate}=1%
-Jan 25\fi%
-\ifnum\value{whichdate}=2%
-Jan 27\fi%
-\ifnum\value{whichdate}=3%
-Jan 29\fi%
-\ifnum\value{whichdate}=4%
-Feb 1\fi%
-\ifnum\value{whichdate}=5%
-Feb 3\fi%
-\ifnum\value{whichdate}=6%
-Feb 5\fi%
-\ifnum\value{whichdate}=7%
-Feb 8\fi%
-\ifnum\value{whichdate}=8%
-Feb 10\fi%
-\ifnum\value{whichdate}=9%
-Feb 12\fi%
-\ifnum\value{whichdate}=10%
-Feb 17\fi%
-\ifnum\value{whichdate}=11%
-Feb 19\fi%
-\ifnum\value{whichdate}=12%
-Feb 22\fi%
-\ifnum\value{whichdate}=13%
-Feb 24\fi%
-\ifnum\value{whichdate}=14%
-Feb 26\fi%
-\ifnum\value{whichdate}=15%
-Feb 29\fi%
-\ifnum\value{whichdate}=16%
-Mar 2\fi%
-\ifnum\value{whichdate}=17%
-Mar 4\fi%
-\ifnum\value{whichdate}=18%
-Mar 7\fi%
-\ifnum\value{whichdate}=19%
-Mar 9\fi%
-\ifnum\value{whichdate}=20%
-Mar 11\fi%
-\ifnum\value{whichdate}=21%
-Mar 21\fi%
-\ifnum\value{whichdate}=22%
-Mar 23\fi%
-\ifnum\value{whichdate}=23%
-Mar 25\fi%
-\ifnum\value{whichdate}=24%
-Mar 28\fi%
-\ifnum\value{whichdate}=25%
-Mar 30\fi%
-\ifnum\value{whichdate}=26%
-Apr 1\fi%
-\ifnum\value{whichdate}=27%
-Apr 4\fi%
-\ifnum\value{whichdate}=28%
-Apr 6\fi%
-\ifnum\value{whichdate}=29%
-Apr 8\fi%
-\ifnum\value{whichdate}=30%
-Apr 11\fi%
-\ifnum\value{whichdate}=31%
-Apr 13\fi%
-\ifnum\value{whichdate}=32%
-Apr 15\fi%
-\ifnum\value{whichdate}=33%
-Apr 18\fi%
-\ifnum\value{whichdate}=34%
-Apr 20\fi%
-\ifnum\value{whichdate}=35%
-Apr 22\fi%
-\ifnum\value{whichdate}=36%
-Apr 25\fi%
-\ifnum\value{whichdate}=37%
-Apr 27\fi%
-\ifnum\value{whichdate}>37%
-PAST END\fi%
-}
-
-\newlength{\tocspacerlength}
-\settowidth{\tocspacerlength}{Mar 999: }
-\makeatletter
-\let\oldsection\section
-\newtoks\temptoks
-\def\section#1{%
-    \addtocounter{whichdate}{1}%
-    \temptoks{#1}
-    \edef\temp{
-        \@nx\oldsection[\rlap{\nextdate:}\hskip\tocspacerlength\the\temptoks]{\nextdate: \the\temptoks}%
-    }
-    \temp
-}
-\makeatother
-
-
-
-
-
-
 
 \begin{document}
 
@@ -342,7 +27,6 @@ PAST END\fi%
 \todo[inline]{Remember to use $f\co A \to B$ everywhere.}
 
 \todo[inline]{Should sections have subsections?  Does that help organize the TOC?}
-
 
 
 
