fix some spacing around colons in the toc

--- a/preamble.tex
+++ b/preamble.tex
@@ -218,13 +218,13 @@
 \newcommand{\thedate}{
     \ifcase\value{whichdate}
     \or % 1
-        Jan 25
+        Jan 25%
     \or % 2
-        Jan 27
+        Jan 27%
     \or % 3
-        Jan 29
+        Jan 29%
     \or % 4
-        Feb 1
+        Feb 1%
     \or % 5
         Feb 3%
     \or % 6%
